# prod-hack-template-2

./: .dockerignore  .env copy  .env.example  .gitignore  .gitlab-ci.yml  ads  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2025_11_09_1139-cd5a3ffeec47_create_user_model.py  2025_11_13_1546-1492a5c8fcc2_add_avatar_file_key_field_for_user_model.py  2025_11_13_2204-00073b209596_add_token_model.py  2025_11_13_2214-276611520c40_add_token_model.py  2025_11_21_1641-99db91c7e266_basic_models.py  2025_11_21_1644-a0fa2fd91b67_basic_models.py
backend/src/: main.py  settings.py
backend/src/api/: middlewares.py  router.py
backend/src/api/v1/: __init__.py  files.py  health.py  main_router.py  users.py
backend/src/core/: db.py  dependencies.py  error.py  repository.py  security.py
backend/src/core/auth/: dependencies.py  security.py
backend/src/core/base/: service.py
backend/src/core/cache/: engine.py
backend/src/core/db/: dependencies.py  engine.py
backend/src/core/dependencies/: container.py
backend/src/core/dependencies/providers/: __init__.py  config.py  database.py  redis.py  repositories.py  services.py
backend/src/core/s3/: client.py  dependencies.py  engine.py
backend/src/dependencies/: users.py
backend/src/errors/: users.py
backend/src/models/: __init__.py  delivery.py  places.py  tokens.py  users.py
backend/src/repositories/: base.py  tokens.py  users.py
backend/src/schemas/: files.py  token.py  tokens.py  users.py
backend/src/services/: base.py  files.py  users.py
backend/tests/: conftest.py
backend/tests/e2e/: test_user_flow.py
backend/tests/unit/: test_user_services.py
deploy/ansible/: playbook.yml  secrets.example.yml
deploy/ansible/group_vars/: all.yml  db.yml  web.yml
deploy/ansible/inventory/: hosts.example.ini
deploy/ansible/roles/app/tasks/: main.yml
deploy/ansible/roles/postgresql/tasks/: main.yml
deploy/docker/: docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
deploy/jobs/: build.yml  deploy.yml  lint.yml  test.yml
frontend/: .stylelintrc.json  Dockerfile  package-lock.json  package.json
frontend/components/Card/: Card.module.css  Card.props.ts  Card.tsx
frontend/pages/: _app.tsx  _document.tsx  index.tsx
frontend/styles/: globals.css
nginx/: nginx.conf
